Added getCities and getCountries endpoints (#48)
